--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Resume Builder</title>
   </head>
   <body>
+    <div id="global-loader" style="display: flex; align-items: center; justify-content: center; height: 100vh; background: #1E3A8A;">
+    <img src="/logo.png" alt="Loading..." style="width: 300px; height: auto;" />
+    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
