add a progress bar

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Resume Builder</title>
   </head>
   <body>
-    <div id="global-loader" style="display: flex; align-items: center; justify-content: center; height: 100vh; background: #1E3A8A;">
-    <img src="/logo.png" alt="Loading..." style="width: 300px; height: auto;" />
+    <div id="global-loader" style="display: flex; align-items: center; justify-content: center; height: 100vh; background: #FF714D;">
+    <img src="/logo.jpg" alt="Loading..." style="width: 300px; height: auto;" />
     </div>
     
     <div id="root"></div>
